cmake_minimum_required (VERSION 2.6)
project(grpc_proxy)

if(WIN32)
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /std:c++latest /MTd")
elseif(UNIX)
  if (CMAKE_COMPILER_IS_GNUCC AND CMAKE_CXX_COMPILER_VERSION VERSION_LESS 7.0)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
  else()
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
  endif()
endif()

include_directories("${PROJECT_SOURCE_DIR}/src/")

add_executable(grpc_proxy ${PROJECT_SOURCE_DIR}/src/GrpcGateway.cpp)
if(WIN32)
  target_link_libraries(grpc_proxy ws2_32)
  target_link_libraries(grpc_proxy nghttp2)
elseif(UNIX)
  find_package(Threads REQUIRED)
  target_link_libraries(grpc_proxy pthread)
endif()